TestSuite/errors/err0356_named_local_record2.pas
var global: integer;

type int = integer;

type Class1<T,T1> = class
  classfield: integer;
  const cc = 2;
  function p<PPT>(pa,pb: real): integer;
  type int1 = record
        j: integer := cc;
        mostinternal1: set of integer := [j];
      end;
  begin
    
  end;  
end;  
  
begin
end.